Started added contnet and styling

--- a/index.html
+++ b/index.html
@@ -11,12 +11,95 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!-- JS -->
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <header>
+    <section id="banner-main" class="banner">
+      <span class="f-row gap-s f-c-c"><img class="icon-m" src="./img/icons/tag-icon.png" alt="Price tag icon"><p>EXCLUSIVE OFFER ONLY AVAILABLE ON THIS PAGE</p></span>
+    </section>
+    <nav id="nav">
+      <section class="content-wrap">
+        <div class="f-row f-c-b">
+          <a href="#"><img class="logo" src="./img/logos/SnapLogoBlack.png" alt="SNAP logo"></a>
+          <a href="#" class="button-link">Buy Now</a>
+        </div>
+      </section>
+      
+    </nav>
+    <section class="banner">
+      <span class="f-row f-nowrap gap-s f-c-c"><img class="icon-m" src="./img/icons/badge-icon.png" alt="Badge icon"><p>60 Day No-Risk Trial</p></span>
+      <span class="f-row f-nowrap gap-s f-c-c"><img class="icon-m" src="./img/icons/bottle-icon.png" alt="Delivery icon"><p>Same Day Fulfillment</p></span>
+      <span class="f-row f-nowrap gap-s f-c-c"><img class="icon-m" src="./img/icons/money-icon.png" alt="Money icon"><p>100% Money Back Guarantee</p></span>
+    </section>
+  </header>
+  <main>
+    <section id="hero" class="section-wrap">
+      <div class="content-wrap">
+        <div class="f-col">
+          <div>
+            <div class="inline-bento bg-primary-5">
+              <svg width="79" height="12" viewBox="0 0 79 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6.31579 9.64421L10.2189 12L9.18316 7.56L12.6316 4.57263L8.09053 4.18737L6.31579 0L4.54105 4.18737L0 4.57263L3.44842 7.56L2.41263 12L6.31579 9.64421Z" fill="white"/>
+                <path d="M22.9486 9.64421L26.8518 12L25.816 7.56L29.2644 4.57263L24.7233 4.18737L22.9486 0L21.1739 4.18737L16.6328 4.57263L20.0812 7.56L19.0454 12L22.9486 9.64421Z" fill="white"/>
+                <path d="M39.2617 9.64421L42.9697 12L41.9857 7.56L45.2617 4.57263L40.9477 4.18737L39.2617 0L37.5757 4.18737L33.2617 4.57263L36.5377 7.56L35.5537 12L39.2617 9.64421Z" fill="white"/>
+                <path d="M55.5775 9.64421L59.4807 12L58.4449 7.56L61.8933 4.57263L57.3522 4.18737L55.5775 0L53.8028 4.18737L49.2617 4.57263L52.7101 7.56L51.6744 12L55.5775 9.64421Z" fill="white"/>
+                <path d="M72.2103 9.64421L76.1135 12L75.0777 7.56L78.5261 4.57263L73.9851 4.18737L72.2103 0L70.4356 4.18737L65.8945 4.57263L69.343 7.56L68.3072 12L72.2103 9.64421Z" fill="white"/>
+                </svg>
+                <p>4.6/5</p>
+                <a href="#reviews" class="text-link">See Reviews</a>
+            </div>
+            <p class="overline">Prostate Health</p>
+            <h1 class="display-1">Soothe & Support Prostate Health</h1>
+          </div>
+          <p>Our unique targeted blend of mushrooms, antioxidant nutrients and botanical extracts support male reproductive health.*</p>
+
+        </div>
+        <div class="f-row">
+          <ul>
+            <li class="f-row f-c-s gap-s">
+              <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12 24.5C18.624 24.5 24 19.1276 24 12.5C24 5.8724 18.624 0.5 12 0.5C5.376 0.5 0 5.8724 0 12.5C0 19.1276 5.376 24.5 12 24.5ZM8.18394 11.1236L6.48003 12.8204L10.7279 17.0636L17.52 10.2752L15.8161 8.57839L10.7279 13.6688L8.18394 11.1236Z" fill="#346739"/>
+                </svg>
+              <span>Supports prostate health*</span>
+            </li>
+          </ul>
+          <img src="" alr="A column of logos">
+      </div>
+
+      </div>
+    </section>
+    <section id="trust" class="section-wrap">
+      <div class="f-row f-c-c">
+        <img src="" alt=" logo">
+      </div>
+
+    </section>
+  </main>
+  <footer id="footer" class="bg-primary-5">
+    <section class="section-wrap">
+      <div class="content-wrap content-thin">
+        <div class="f-col f-c-c text-center">
+          <img class="logo" src="img/logos/LogoLightGreen.png" alt="SNAP logo">
+          <p class="body-m">*These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease. +As part of a healthy lifestyle.</p>
+          <ul class="list-wrap-row f-row f-c-c">
+            <li>
+              <a class="footer-link" href="#">Privacy Policy</a>
+            </li>
+            <li>
+              <a class="footer-link" href="#">Terms of Use</a>
+            </li>
+            <li>
+              <a class="footer-link" href="#">Contact Us</a>
+            </li>
+          </ul>
+          <p class="body-s">© 2024 <a href="#">Snap Supplements</a>. All Rights Reserved.</p>
+        </div>
+      </div>
+    </section>
+  </footer>
 </body>
 </html>
