Continued with main sections content and styling

--- a/index.html
+++ b/index.html
@@ -72,12 +72,111 @@
 
       </div>
     </section>
-    <section id="trust" class="section-wrap">
+    <section id="trust" class="section-wrap bg-primary-1">
       <div class="f-row f-c-c">
-        <img src="" alt=" logo">
+        <img class="trust-logo" src="./img/logos/endorser-menshealth.png" alt="Men's health logo">
+        <img class="trust-logo" src="./img/logos/endorser-forbes.png" alt="Forbes logo">
+        <img class="trust-logo" src="./img/logos/endorser-business-insider.png" alt="Business insider logo">
+        <img class="trust-logo" src="./img/logos/endorser-muscle-fitness.png" alt="Muscle and fitness logo">
+        <img class="trust-logo" src="./img/logos/endorser-mens-journal.png" alt="Men's journal logo">
       </div>
-
     </section>
+    <section id="the-problem" class="section-wrap">
+      <div class="content-wrap">
+        <div class="f-col gap-xl f-c-c">
+          <div class="content-thin f-col text-center">
+            <p class="overline primary-5">The Problem</p>
+            <h2 class="heading-1">Unhealthy Prostates May Lead to Serious Health Issues</h2>
+            <p>Prevalence of prostate enlargement rises sharply <strong>starting at 45 years of age</strong>. Making reproductive health a priority can lead to better health outcomes.</p>
+          </div>
+          <div class="g-col-2">
+            <div class="f-col f-s-c">
+              <div class="f-col gap-s">
+                <h3 class="heading-3">Prostate Cancer</h3>
+                <p>Consult your healthcare provider if you are currently taking medications or have medical concerns before taking this product.</p>
+              </div>
+              <div class="f-col gap-s">
+                <h3 class="heading-3">Benign Prostatic Hyperplasia (BPH)</h3>
+                <p>Consult your healthcare provider if you are currently taking medications or have medical concerns before taking this product.</p>
+              </div>
+              <div class="f-col gap-s">
+                <h3 class="heading-3">Urination Issues</h3>
+                <p>Consult your healthcare provider if you are currently taking medications or have medical concerns before taking this product.</p>
+              </div>
+              <div class="f-col gap-s">
+                <h3 class="heading-3">Inflammation & Infection</h3>
+                <p>Consult your healthcare provider if you are currently taking medications or have medical concerns before taking this product.</p>
+              </div>
+            </div>
+            <img class="block-image" src="./img/prostate-benefit-3.png" alt="A man grabbing his knee due to inflamation caused by prostate issues">
+          </div>
+          <div class="f-col f-c-c gap-s text-center">
+            <h2 class="heading-4">What Can You Do About It?</h2>
+            <h3 class="body-m bounce f-row f-c-c gap-xs">
+              <a class="text-link" href="#our-solution">Find Out</a>
+              <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.50094 12.8258L1.83594 5.94183L3.5477 4.17383L8.50094 9.28983L13.4542 4.17383L15.1659 5.94183L8.50094 12.8258Z" fill="currentColor"/>
+              </svg>
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="our-solution" class="section-wrap bg-primary-0">
+      <div class="content-wrap">
+
+      </div>
+    </section>
+
+    <!-- Reviews -->
+    <section id="reviews" class="section-wrap">
+      <div class="content-wrap">
+        <div class="f-col gap-l f-c-c">
+          <div class="content-thin f-col text-center">
+            <p class="overline primary-5">Great Reviews</p>
+            <h2 class="heading-1">Highly Rated by Healthy Men Everywhere</h2>
+            <span class="f-row f-c-c gap-s">
+              <svg width="136" height="19" viewBox="0 0 136 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.5 15.27L16.68 19L15.04 11.97L20.5 7.24L13.31 6.63L10.5 0L7.69 6.63L0.5 7.24L5.96 11.97L4.32 19L10.5 15.27Z" fill="#346739"/>
+                <path d="M39.5 15.27L45.68 19L44.04 11.97L49.5 7.24L42.31 6.63L39.5 0L36.69 6.63L29.5 7.24L34.96 11.97L33.32 19L39.5 15.27Z" fill="#346739"/>
+                <path d="M68 15.27L73.871 19L72.313 11.97L77.5 7.24L70.6695 6.63L68 0L65.3305 6.63L58.5 7.24L63.687 11.97L62.129 19L68 15.27Z" fill="#346739"/>
+                <path d="M96.5 15.27L102.68 19L101.04 11.97L106.5 7.24L99.31 6.63L96.5 0L93.69 6.63L86.5 7.24L91.96 11.97L90.32 19L96.5 15.27Z" fill="#346739"/>
+                <path d="M125.5 15.27L131.68 19L130.04 11.97L135.5 7.24L128.31 6.63L125.5 0L122.69 6.63L115.5 7.24L120.96 11.97L119.32 19L125.5 15.27Z" fill="#346739"/>
+              </svg>
+              <span>4.6/5</span>
+            </span>
+          </div>
+          <div class="reviews-grid">
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-1.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-2.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-3.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-4.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-5.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-6.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <a class="image-link" href="#" target="_blank">
+              <img class="block-image" loading="lazy" src="./img/reviews/review-img-7.jpg" alt="A photo of prostate health supplements">
+            </a>
+            <div class="f-col f-c-c text-center">
+              <a class="text-link" href="#" target="_blank">See all 40+ reviews</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--  -->
   </main>
   <footer id="footer" class="bg-primary-5">
     <section class="section-wrap">
