Small tweaks and polish

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>###</title>
+  <link rel="icon" href="https://snapsupplements.com/favicon/favicon-32x32.png?v=XbEu1fy3uIo1U99D2sjKG105zdKPUEK2j0Z7VSG6">
+  <title>Prostate Health | Support Your Prostate Naturally</title>
+  <meta name="description" content="Our unique targeted blend of mushrooms, antioxidant nutrients and botanical extracts support male reproductive health.">
+  <meta property="og:title" content="Prostate Health | Support Your Prostate Naturally">
+  <meta property="og:description" content="Our unique targeted blend of mushrooms, antioxidant nutrients and botanical extracts support male reproductive health.">
+  <meta property="og:image" content="https://snapsupplements.com/images/facebook_og/prostate_health.jpg">
+  <meta property="og:type" content="product">
+  <meta property="og:site_name" content="Snap Supplements">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,13 +31,14 @@
     <nav id="nav">
       <section class="content-wrap">
         <div class="f-row f-c-b">
-          <a href="#"><img class="logo" src="./img/logos/SnapLogoBlack.png" alt="SNAP logo"></a>
+          <a href="#" class="f-row f-c-c"><img class="logo" src="./img/logos/SnapLogoBlack.png" alt="SNAP logo"></a>
           <a href="#" class="button-link-s">Buy Now</a>
         </div>
       </section>
     </nav>
   </header>
   <main>
+    <!-- Hero -->
     <section id="hero" class="section-wrap">
       <div class="content-wrap">
         <div id="hero-grid" class="g-col-2">
@@ -92,15 +100,18 @@
                   <span>Supports healthy immune system*</span>
                 </li>
               </ul>
-              <img src="./img/badges-vertical.png" alt="A column of logos">
+              <img class="block-image" src="./img/badges-vertical.png" alt="A column of logos">
             </div>
 
             <!-- CTA -->
             <div class="cta">
               <div class="f-col f-c-c gap-xs text-center">
                 <span class="body-s">100 People Have This In Their Cart Now</span>
-                <a class="button-link fullwidth" href="#">Improve your Prostate Health Today!</a>
-                <div class="f-row f-c-b">
+                <a class="cta-button-link">
+                  <span class="over-peel">Improve your Health Risk Free Now!</span>
+                  <span class="under-peel">Free</span>
+                </a>
+                <div class="f-row f-c-c gap-xs">
                   <span class="body-s f-row f-c-s gap-xs">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_4007_2236)">
@@ -212,7 +223,7 @@
               <p>Our unique targeted blend of mushrooms, antioxidant nutrients and botanical extracts support male reproductive health.</p>
             </div>
             <div class="f-col gap-xs">
-              <a class="button-link" href="#">Buy Now</a>
+              <a class="button-link" href="#">Try Risk-Free Now</a>
               <span>90-Day Satisfaction Guarantee!</span>
             </div>
           </div>
@@ -253,8 +264,11 @@
           <div class="cta">
             <div class="f-col f-c-c gap-xs text-center">
               <span class="body-s">100 People Have This In Their Cart Now</span>
-              <a class="button-link fullwidth" href="#">Improve your Prostate Health Today!</a>
-              <div class="f-row f-c-b">
+              <a class="cta-button-link">
+                <span class="over-peel">Improve your Health Risk Free Now!</span>
+                <span class="under-peel">Free</span>
+              </a>
+              <div class="f-row f-c-c gap-xs">
                 <span class="body-s f-row f-c-s gap-xs">
                   <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_4007_2236)">
@@ -410,8 +424,11 @@
             <div class="cta">
               <div class="f-col f-c-c gap-xs text-center">
                 <span class="body-s">100 People Have This In Their Cart Now</span>
-                <a class="button-link fullwidth" href="#">Improve your Prostate Health Today!</a>
-                <div class="f-row f-c-b">
+                <a class="cta-button-link">
+                  <span class="over-peel">Improve your Health Risk Free Now!</span>
+                  <span class="under-peel">Free</span>
+                </a>
+                <div class="f-row f-c-c gap-xs">
                   <span class="body-s f-row f-c-s gap-xs">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_4007_2236)">
@@ -477,8 +494,11 @@
             <div class="cta">
               <div class="f-col f-c-c gap-xs text-center">
                 <span class="body-s">100 People Have This In Their Cart Now</span>
-                <a class="button-link fullwidth" href="#">Improve your Prostate Health Today!</a>
-                <div class="f-row f-c-b">
+                <a class="cta-button-link">
+                  <span class="over-peel">Improve your Health Risk Free Now!</span>
+                  <span class="under-peel">Free</span>
+                </a>
+                <div class="f-row f-c-c gap-xs">
                   <span class="body-s f-row f-c-s gap-xs">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_4007_2236)">
@@ -637,8 +657,11 @@
             <div class="cta">
               <div class="f-col f-c-c gap-xs text-center">
                 <span class="body-s">100 People Have This In Their Cart Now</span>
-                <a class="button-link fullwidth" href="#">Improve your Prostate Health Today!</a>
-                <div class="f-row f-c-b">
+                <a class="cta-button-link">
+                  <span class="over-peel">Improve your Health Risk Free Now!</span>
+                  <span class="under-peel">Free</span>
+                </a>
+                <div class="f-row f-c-c gap-xs">
                   <span class="body-s f-row f-c-s gap-xs">
                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_4007_2236)">
